feat(code-index): add support for user-editable indexRoot
Introduce a user-editable `indexRoot` property to the code index configuration. This allows users to specify a custom root directory for indexing, which is now persisted and used throughout the indexing workflow. The system detects changes to `indexRoot` and triggers restart requirements as needed. All relevant services and vector store logic now use `indexRoot` instead of the workspace path when set. Includes comprehensive tests for the new functionality.

--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "URL d'Ollama:",
 		"qdrantUrlLabel": "URL de Qdrant",
 		"qdrantKeyLabel": "Clau de Qdrant:",
+		"indexRootLabel": "Directori arrel de l'índex:",
+		"indexRootPlaceholder": "Introduïu el camí arrel de l'índex personalitzat (opcional)",
+		"indexRootDescription": "Especifiqueu un directori personalitzat per servir com a arrel per a la indexació del codi. Deixeu-ho buit per utilitzar l'arrel de l'espai de treball.",
 		"startIndexingButton": "Iniciar indexació",
 		"clearIndexDataButton": "Esborrar dades d'índex",
 		"unsavedSettingsMessage": "Si us plau, deseu la configuració abans d'iniciar el procés d'indexació.",
