--- a/webview-ui/src/i18n/locales/de/settings.json
+++ b/webview-ui/src/i18n/locales/de/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "Ollama-URL:",
 		"qdrantUrlLabel": "Qdrant-URL",
 		"qdrantKeyLabel": "Qdrant-Schlüssel:",
+		"indexRootLabel": "Index-Stammverzeichnis:",
+		"indexRootPlaceholder": "Benutzerdefinierten Index-Stammpfad eingeben (optional)",
+		"indexRootDescription": "Geben Sie ein benutzerdefiniertes Verzeichnis an, das als Stamm für die Code-Indexierung dient. Lassen Sie es leer, um das Arbeitsbereich-Stammverzeichnis zu verwenden.",
 		"startIndexingButton": "Indexierung starten",
 		"clearIndexDataButton": "Indexdaten löschen",
 		"unsavedSettingsMessage": "Bitte speichere deine Einstellungen, bevor du den Indexierungsprozess startest.",
