--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "Ollama URL:",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant Key:",
+		"indexRootLabel": "Index Root Directory:",
+		"indexRootPlaceholder": "Enter custom index root path (optional)",
+		"indexRootDescription": "Specify a custom directory to serve as the root for code indexing. Leave empty to use the workspace root.",
 		"startIndexingButton": "Start Indexing",
 		"clearIndexDataButton": "Clear Index Data",
 		"unsavedSettingsMessage": "Please save your settings before starting the indexing process.",
