--- a/webview-ui/src/i18n/locales/es/settings.json
+++ b/webview-ui/src/i18n/locales/es/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "URL de Ollama:",
 		"qdrantUrlLabel": "URL de Qdrant",
 		"qdrantKeyLabel": "Clave de Qdrant:",
+		"indexRootLabel": "Directorio raíz del índice:",
+		"indexRootPlaceholder": "Ingresa la ruta raíz del índice personalizada (opcional)",
+		"indexRootDescription": "Especifica un directorio personalizado para servir como raíz para la indexación del código. Déjalo vacío para usar la raíz del espacio de trabajo.",
 		"startIndexingButton": "Iniciar indexación",
 		"clearIndexDataButton": "Borrar datos de índice",
 		"unsavedSettingsMessage": "Por favor guarda tus ajustes antes de iniciar el proceso de indexación.",
