--- a/webview-ui/src/i18n/locales/fr/settings.json
+++ b/webview-ui/src/i18n/locales/fr/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "URL Ollama :",
 		"qdrantUrlLabel": "URL Qdrant",
 		"qdrantKeyLabel": "Clé Qdrant :",
+		"indexRootLabel": "Répertoire racine d'index :",
+		"indexRootPlaceholder": "Entrez le chemin racine d'index personnalisé (optionnel)",
+		"indexRootDescription": "Spécifiez un répertoire personnalisé pour servir de racine à l'indexation du code. Laissez vide pour utiliser la racine de l'espace de travail.",
 		"startIndexingButton": "Démarrer l'indexation",
 		"clearIndexDataButton": "Effacer les données d'index",
 		"unsavedSettingsMessage": "Merci d'enregistrer tes paramètres avant de démarrer le processus d'indexation.",
