--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "URL Ollama:",
 		"qdrantUrlLabel": "URL Qdrant",
 		"qdrantKeyLabel": "Chiave Qdrant:",
+		"indexRootLabel": "Directory radice dell'indice:",
+		"indexRootPlaceholder": "Inserisci il percorso radice dell'indice personalizzato (opzionale)",
+		"indexRootDescription": "Specifica una directory personalizzata da utilizzare come radice per l'indicizzazione del codice. Lascia vuoto per utilizzare la radice dell'area di lavoro.",
 		"startIndexingButton": "Avvia indicizzazione",
 		"clearIndexDataButton": "Cancella dati indice",
 		"unsavedSettingsMessage": "Per favore salva le tue impostazioni prima di avviare il processo di indicizzazione.",
