--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "Ollama URL：",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrantキー：",
+		"indexRootLabel": "インデックスルートディレクトリ：",
+		"indexRootPlaceholder": "カスタムインデックスルートパスを入力（オプション）",
+		"indexRootDescription": "コードインデックス作成のルートとして使用するカスタムディレクトリを指定します。空のままにするとワークスペースルートを使用します。",
 		"startIndexingButton": "インデックス作成を開始",
 		"clearIndexDataButton": "インデックスデータをクリア",
 		"unsavedSettingsMessage": "インデックス作成プロセスを開始する前に設定を保存してください。",
