--- a/webview-ui/src/i18n/locales/nl/settings.json
+++ b/webview-ui/src/i18n/locales/nl/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "Ollama URL:",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant-sleutel:",
+		"indexRootLabel": "Index Root Directory:",
+		"indexRootPlaceholder": "Voer aangepast index root pad in (optioneel)",
+		"indexRootDescription": "Specificeer een aangepaste directory om te dienen als root voor code indexering. Laat leeg om de workspace root te gebruiken.",
 		"startIndexingButton": "Indexering starten",
 		"clearIndexDataButton": "Indexgegevens wissen",
 		"unsavedSettingsMessage": "Sla je instellingen op voordat je het indexeringsproces start.",
