--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "URL Ollama:",
 		"qdrantUrlLabel": "URL Qdrant",
 		"qdrantKeyLabel": "Klucz Qdrant:",
+		"indexRootLabel": "Katalog główny indeksu:",
+		"indexRootPlaceholder": "Wprowadź niestandardową ścieżkę główną indeksu (opcjonalne)",
+		"indexRootDescription": "Określ niestandardowy katalog, który będzie służył jako główny dla indeksowania kodu. Pozostaw puste, aby użyć głównego katalogu obszaru roboczego.",
 		"startIndexingButton": "Rozpocznij indeksowanie",
 		"clearIndexDataButton": "Wyczyść dane indeksu",
 		"unsavedSettingsMessage": "Zapisz swoje ustawienia przed rozpoczęciem procesu indeksowania.",
