--- a/webview-ui/src/i18n/locales/pt-BR/settings.json
+++ b/webview-ui/src/i18n/locales/pt-BR/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "URL Ollama:",
 		"qdrantUrlLabel": "URL Qdrant",
 		"qdrantKeyLabel": "Chave Qdrant:",
+		"indexRootLabel": "Diretório Raiz do Índice:",
+		"indexRootPlaceholder": "Digite o caminho raiz do índice personalizado (opcional)",
+		"indexRootDescription": "Especifique um diretório personalizado para servir como raiz para indexação de código. Deixe vazio para usar a raiz do workspace.",
 		"startIndexingButton": "Iniciar Indexação",
 		"clearIndexDataButton": "Limpar Dados de Índice",
 		"unsavedSettingsMessage": "Por favor, salve suas configurações antes de iniciar o processo de indexação.",
