--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "URL Ollama:",
 		"qdrantUrlLabel": "URL Qdrant",
 		"qdrantKeyLabel": "Ключ Qdrant:",
+		"indexRootLabel": "Корневая директория индекса:",
+		"indexRootPlaceholder": "Введите пользовательский путь корневой директории индекса (необязательно)",
+		"indexRootDescription": "Укажите пользовательскую директорию для использования в качестве корня для индексации кода. Оставьте пустым для использования корня рабочего пространства.",
 		"startIndexingButton": "Начать индексацию",
 		"clearIndexDataButton": "Очистить данные индекса",
 		"unsavedSettingsMessage": "Пожалуйста, сохрани настройки перед запуском процесса индексации.",
