--- a/webview-ui/src/i18n/locales/tr/settings.json
+++ b/webview-ui/src/i18n/locales/tr/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "Ollama URL:",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant Anahtarı:",
+		"indexRootLabel": "İndeks Kök Dizini:",
+		"indexRootPlaceholder": "Özel indeks kök yolunu girin (isteğe bağlı)",
+		"indexRootDescription": "Kod indeksleme için kök olarak kullanılacak özel bir dizin belirtin. Çalışma alanı kökünü kullanmak için boş bırakın.",
 		"startIndexingButton": "İndekslemeyi Başlat",
 		"clearIndexDataButton": "İndeks Verilerini Temizle",
 		"unsavedSettingsMessage": "İndeksleme işlemini başlatmadan önce lütfen ayarlarını kaydet.",
