--- a/webview-ui/src/i18n/locales/vi/settings.json
+++ b/webview-ui/src/i18n/locales/vi/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "URL Ollama:",
 		"qdrantUrlLabel": "URL Qdrant",
 		"qdrantKeyLabel": "Khóa Qdrant:",
+		"indexRootLabel": "Thư mục gốc chỉ mục:",
+		"indexRootPlaceholder": "Nhập đường dẫn gốc chỉ mục tùy chỉnh (tùy chọn)",
+		"indexRootDescription": "Chỉ định một thư mục tùy chỉnh để làm gốc cho việc lập chỉ mục mã. Để trống để sử dụng gốc không gian làm việc.",
 		"startIndexingButton": "Bắt đầu lập chỉ mục",
 		"clearIndexDataButton": "Xóa dữ liệu chỉ mục",
 		"unsavedSettingsMessage": "Vui lòng lưu cài đặt của bạn trước khi bắt đầu quá trình lập chỉ mục.",
