--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "Ollama URL：",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant 密钥：",
+		"indexRootLabel": "索引根目录：",
+		"indexRootPlaceholder": "输入自定义索引根路径（可选）",
+		"indexRootDescription": "指定一个自定义目录作为代码索引的根目录。留空则使用工作区根目录。",
 		"startIndexingButton": "开始索引",
 		"clearIndexDataButton": "清除索引数据",
 		"unsavedSettingsMessage": "请先保存设置再开始索引过程。",
