--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "Ollama URL：",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant 金鑰：",
+		"indexRootLabel": "索引根目錄：",
+		"indexRootPlaceholder": "輸入自訂索引根路徑（可選）",
+		"indexRootDescription": "指定一個自訂目錄作為程式碼索引的根目錄。留空則使用工作區根目錄。",
 		"startIndexingButton": "開始索引",
 		"clearIndexDataButton": "清除索引資料",
 		"unsavedSettingsMessage": "請先儲存設定再開始索引程序。",
