--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "Ollama URL:",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant कुंजी:",
+		"indexRootLabel": "इंडेक्स रूट डायरेक्टरी:",
+		"indexRootPlaceholder": "कस्टम इंडेक्स रूट पथ दर्ज करें (वैकल्पिक)",
+		"indexRootDescription": "कोड इंडेक्सिंग के लिए रूट के रूप में काम करने के लिए एक कस्टम डायरेक्टरी निर्दिष्ट करें। वर्कस्पेस रूट का उपयोग करने के लिए खाली छोड़ें।",
 		"startIndexingButton": "इंडेक्सिंग शुरू करें",
 		"clearIndexDataButton": "इंडेक्स डेटा साफ़ करें",
 		"unsavedSettingsMessage": "इंडेक्सिंग प्रक्रिया शुरू करने से पहले कृपया अपनी सेटिंग्स सहेजें।",
