--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -56,6 +56,9 @@
 		"ollamaUrlLabel": "Ollama URL:",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant 키:",
+		"indexRootLabel": "인덱스 루트 디렉토리:",
+		"indexRootPlaceholder": "사용자 정의 인덱스 루트 경로 입력 (선택사항)",
+		"indexRootDescription": "코드 인덱싱의 루트로 사용할 사용자 정의 디렉토리를 지정합니다. 비워두면 워크스페이스 루트를 사용합니다.",
 		"startIndexingButton": "인덱싱 시작",
 		"clearIndexDataButton": "인덱스 데이터 지우기",
 		"unsavedSettingsMessage": "인덱싱 프로세스를 시작하기 전에 설정을 저장해 주세요.",
